# website

./: .env  .gitignore  404.html  README.md  cleanup.py  index.html  justfile  main.py  mkdocs.yml  pages.j2  pyproject.toml  serve.py  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/mkdocs-edu/: pyproject.toml
.devcontainer/scripts/: build.sh  lib.sh  serve.sh
.github/actions/mkdocs-edu/: Dockerfile  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: website.yml
config/: base-fr.yml  base.yml  mkdocs.yml
docs/: .pages  .pages.j2  index.en.md  index.fr.md  index.md  pages.j2
docs/assignments/: environnement.md  mini-projet.md  optimisations.md  pages.j2
docs/assignments/programmation-noyau/: modules.md  pages.j2  pilotes.md
docs/assignments/programmation-systeme/: fichiers.md  ordonnanceur.md  pages.j2
docs/documentation/: .pages  microprocessor.md  nanopi.md  pages.j2  references.fr.md  tools.fr.md
docs/environnement/: env.fr.md  pages.j2
docs/environnement/env-linux/: env-le.fr.md  env-tp.fr.md  pages.j2
docs/environnement/inc/: boot_cifs.cmd
docs/lecture/: pages.j2
docs/lecture/environnement/: archi-gen.md  archives.md  bootloader.md  debugging.md  dev-env.md  distribution.md  documentation.md  gnu.md  infra-heia.md  pages.j2  production.md  systemes-fichiers.md
docs/lecture/optimisations/: archives.md  compiler.md  examples.md  hardware.md  intro.md  optimisation.md  pages.j2  perf.md  slides.md  timing.md  tools.md  vm.md
docs/lecture/programmation-noyau/: pages.j2
docs/lecture/programmation-systeme/: pages.j2
docs/mini-projet/: donnee.fr.md  pages.j2
docs/optimisations/: pages.j2  perf.fr.md
docs/optimisations/assets/: examples.tar
docs/optimisations/performances/: pages.j2  perf-le.fr.md  perf-tp.fr.md
docs/organisation/: exam.fr.md  intro.fr.md  intro.md  pages.j2
docs/programmation-noyau/: modules.fr.md  pages.j2  pilotes.fr.md
docs/programmation-noyau/modules/: modules-le.fr.md  modules-tp.fr.md  pages.j2
docs/programmation-noyau/pilotes/: pilotes-le.fr.md  pilotes-tp.fr.md
docs/programmation-systeme/: fichiers.fr.md  ordonnanceur.fr.md  pages.j2
docs/programmation-systeme/fichiers/: fichiers-le.fr.md  fichiers-tp.fr.md
docs/programmation-systeme/ordonnanceur/: ordonnanceur-cpl.fr.md  ordonnanceur-le.fr.md  ordonnanceur-tp.fr.md  pages.j2
documentation/: pages.j2
documentation/microprocessor/: index.html
documentation/nanopi/: index.html
documentation/references/: index.html
documentation/tools/: index.html
environnement/: pages.j2
environnement/assets/: sp.02.3_mas_csel_examples.tar
environnement/env/: index.html
environnement/env-linux/env-le/: index.html
mini-projet/donnee/: index.html
optimisations/perf/: index.html
organisation/exam/: index.html
organisation/intro/: index.html
overrides/javascripts/: mathjax.js
overrides/stylesheets/: extra.css
programmation-noyau/: pages.j2
programmation-noyau/modules/: index.html
programmation-noyau/pilotes/: index.html  pages.j2
programmation-systeme/: pages.j2
programmation-systeme/assets/: list.c  sp.05.3_mas_csel_silly_led_control.c
programmation-systeme/fichiers/: index.html  pages.j2
programmation-systeme/ordonnanceur/: index.html
stylesheets/: extra.css
todo/: index.html
(+142 files in other folders)
