[tool.poetry]
name = "DevOps Website"
version = "0.1.0"
description = "mkdocs for education web site"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-awesome-pages-plugin = "^2.10.1"
mkdocs-calendar-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-include-markdown-plugin = "^7.1.3"
mkdocs-jconfig-plugin = "^0.1.1"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-material = "^9.6.3"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-pages-j2-plugin = "^0.3.0"
mkdocs-static-i18n = "^1.3.0"
python-markdown-comments = { git = "https://github.com/ryneeverett/python-markdown-comments.git", rev = "973fe7b" }
python-markdown-math = "^0.8"
platformdirs = "^4.3.6"
mkdocs-open-in-new-tab = "^1.0.8"
mkdocs-exclude-search = "^0.6.6"
pytz = "^2025.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
