[tool.poetry]
name = "mkdocs-edu"
version = "0.1.0"
description = "Docker image for mkdocs-edu"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
mkdocs-material = "^8"
mkdocs-select-files = "^0.4.0"
mkdocs-macros-plugin = "^0.6.3"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-pdf-export-plugin = "^0.5.10"
python-markdown-math = "^0.8"
python-markdown-comments = {git = "https://github.com/ryneeverett/python-markdown-comments.git", rev = "aa82610"}
pymdown-include = "^0.1.0"
CairoSVG = "^2.5.2"
mkdocs-awesome-pages-plugin = "^2.6.1"
mkdocs-static-i18n = "^0.44"
jinja2-cli = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
